--- a/app/sass/sub/_footer.scss
+++ b/app/sass/sub/_footer.scss
@@ -1,52 +1,25 @@
-.footer{
-  padding: 40px 0 20px;
-  background-color: $blueDark;
-  color: #fff;
-
-  &__logo{
-    margin-bottom: 23px;
-  }
-
-  &__icon{
-    margin-bottom: 15px;
-    padding: 10px 0 10px 50px;
-    background: no-repeat left center;
-    font-size: 20px;
-    font-weight: 700;
-  }
-
-  &__map{
-    height: 230px;
-    background-color: #ccc;
-    @include media($breakpointMd){
-      margin-top: -80px;
-    }
-  }
-
-  &--contact{
-    padding: 8px 0;
-  }
+.social-icon{
+   display: inline-block;
+   width: 30px;
+   height: 30px;
+   background: center /contain no-repeat;
+   &--fb{background-image: url('../images/fb.png');}
+   &--inst{background-image: url('../images/insta.png');}
 }
 
+
 .credits{
-  margin-top: 10px;
-  font-size: 10px;
-  @include media($breakpointMd){
-    margin: 0;
-  }
+   padding: 10px 0;
+   background-color: #fff;
+   color: $dark;
 
-  &__blue{
-    margin-left: 10px;
-    padding-left: 10px;
-    display: inline-block;
-    border-left: 1px solid $blue;
-  }
-
-  &__author{
-    vertical-align: middle;
-  }
-
-  &__logo{
-    width: 118px;
-  }
+   &__text{
+      margin-right: 15px;
+      padding-right: 15px;
+      display: inline-block;
+      height: 38px;
+      border-right: 2px solid $gray;
+      line-height: 38px;
+      vertical-align: top;
+   }
 }
