--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -59,10 +59,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 body {
-  font-family: "proxima-nova", sans-serif;
   font-weight: 400;
   font-size: 14px;
-  color: #2b364b;
 }
 
 h1, h2 {
@@ -70,22 +68,12 @@ h1, h2 {
 }
 
 h1 {
-  font-size: 30px;
-  font-family: "proxima-nova", sans-serif;
-}
-@media screen and (min-width: 992px) {
-  h1 {
-    font-size: 40px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  h1 {
-    font-size: 60px;
-  }
+  font-size: 26px;
 }
 
 h2 {
   font-size: 26px;
+  color: #cecece;
 }
 @media screen and (min-width: 992px) {
   h2 {
@@ -145,14 +133,11 @@ input, textarea {
   padding: 14px 10px;
   display: block;
   width: 100%;
-  border: 3px solid #009fe3;
   border-radius: 6px;
   box-sizing: border-box;
-  font-family: "proxima-nova", sans-serif;
 }
 input:focus, textarea:focus {
   outline: 0;
-  border-color: #2b364b;
 }
 
 textarea {
@@ -513,711 +498,155 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
      object-fit: cover;
 }
 
-.map {
-  height: 400px;
-  background-color: #ccc;
-}
-.map--home {
-  height: 250px;
-}
-@media screen and (min-width: 1200px) {
-  .map--home {
-    height: 100%;
-  }
-}
-
-.mtb-70 {
-  margin-top: 25px;
-  margin-bottom: 25px;
+.mtb-80 {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 992px) {
-  .mtb-70 {
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
-  .mtb-70--navbar {
-    margin-top: 106px;
+  .mtb-80 {
+    margin-top: 60px;
+    margin-bottom: 60px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .mtb-70 {
-    margin-top: 70px;
-    margin-bottom: 70px;
-  }
-  .mtb-70--navbar {
-    margin-top: 126px;
+@media screen and (min-width: 1500px) {
+  .mtb-80 {
+    margin-top: 80px;
+    margin-bottom: 80px;
   }
 }
 
-.ptb-70 {
-  padding-top: 25px;
-  padding-bottom: 25px;
+.ptb-80 {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 @media screen and (min-width: 992px) {
-  .ptb-70 {
-    padding-top: 50px;
-    padding-bottom: 50px;
+  .ptb-80 {
+    padding-top: 60px;
+    padding-bottom: 60px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .ptb-70 {
-    padding-top: 70px;
-    padding-bottom: 70px;
+@media screen and (min-width: 1500px) {
+  .ptb-80 {
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
 
-.btn {
-  padding: 15px 25px;
-  display: inline-block;
-  background-color: #ff5050;
-  border-radius: 5px;
+.dark-bg {
+  background-color: #121618;
   color: #fff;
-  font-weight: 800;
-  text-transform: uppercase;
-  transition: 200ms;
-}
-.btn:hover {
-  background-color: #e90000;
-}
-
-.section__gray-box {
-  height: 200px;
-}
-@media screen and (min-width: 992px) {
-  .section__gray-box {
-    height: auto;
-  }
-  .section--gray {
-    position: relative;
-    padding-bottom: 40px;
-  }
-  .section--gray:before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    display: block;
-    width: 50%;
-    height: 244px;
-    background-color: #e1e1e1;
-    z-index: -1;
-  }
-  .section--gray-left:before {
-    right: 50%;
-  }
-  .section--gray-left .section__gray-box {
-    padding-right: 40px;
-  }
-  .section--gray-right:before {
-    left: 50%;
-  }
-  .section--gray-right .section__gray-box {
-    padding-left: 40px;
-  }
-}
-.section__col-6 {
-  margin-bottom: 20px;
-}
-@media screen and (min-width: 992px) {
-  .section__col-6 {
-    width: calc(50% - 15px);
-    margin-right: 30px;
-  }
-  .section__col-6.flexbox--nd {
-    margin-right: 0;
-    margin-left: 30px;
-  }
-  .section__col-6:last-child {
-    margin-right: 0;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .vertical-line {
-    padding-left: 20px;
-    border-left: 1px solid #e1e1e1;
-  }
-}
-
-.banner {
-  margin-top: 62px;
-  padding: 20px 0;
-  background-color: #009fe3;
-  color: #fff;
-}
-@media screen and (min-width: 992px) {
-  .banner {
-    margin-top: 0;
-    padding: 40px 0;
-  }
-}
-
-.reference {
-  background-color: #fff;
-}
-.reference--blue {
-  background-color: #009fe3;
-}
-.reference--home .reference__icon {
-  margin: 0;
-}
-.reference__wrapper {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-.reference__icon {
-  display: none;
-}
-@media screen and (min-width: 1200px) {
-  .reference__icon {
-    margin: 0 auto;
-    display: block;
-    width: 152px;
-    height: 160px;
-    background: no-repeat center;
-  }
-}
-.reference__btn {
-  margin: 15px 0;
-}
-
-.dot {
-  margin: 0 10px;
-  display: inline-block;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background-color: #aeaeae;
-  vertical-align: middle;
 }
 
 .header {
-  position: fixed;
-  left: 0;
-  top: 0;
-  padding: 10px 0;
-  width: 100%;
-  background-color: #fff;
-  border-bottom: 1px solid #009fe3;
-  z-index: 9999;
+  height: 100vh;
+  background: center /cover no-repeat;
 }
-@media screen and (min-width: 992px) {
-  .header {
-    position: static;
-    padding: 20px 0;
-  }
+.header__slogan {
+  width: 146px;
 }
-
-.logo {
-  float: left;
-  width: 130px;
-}
-@media screen and (min-width: 992px) {
-  .logo {
-    width: auto;
-  }
-}
-
-.burger {
-  float: right;
-  margin-top: 6px;
-  width: 20px;
-  height: 30px;
-  transition: 200ms ease-out;
-}
-.burger__bar {
-  position: relative;
-  margin-top: 14px;
-  width: 100%;
-  height: 2px;
-  background-color: #2b364b;
-  transition: 300ms;
-}
-.burger__bar:before, .burger__bar:after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #2b364b;
-  transition: 300ms;
-}
-.burger__bar:before {
-  top: -5px;
-}
-.burger__bar:after {
-  bottom: -5px;
-}
-.burger--active {
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-}
-.burger--active .burger__bar {
-  background-color: #009fe3;
-}
-.burger--active .burger__bar:before, .burger--active .burger__bar:after {
-  background-color: #009fe3;
-}
-@media screen and (min-width: 992px) {
-  .burger {
-    display: none;
-  }
+.header__small-text {
+  font-size: 20px;
 }
 
 .navbar {
-  position: fixed;
-  top: 62px;
-  left: 0;
+  position: absolute;
+  padding: 30px 0;
   width: 100%;
-  background-color: #2b364b;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
-  transition: 300ms;
+  background-color: #fff;
 }
-.navbar--active {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+.navbar__container {
+  position: relative;
+  padding: 28px 0;
 }
-@media screen and (min-width: 992px) {
-  .navbar {
-    position: absolute;
-    top: auto;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  .navbar--fixed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 999;
-  }
+.navbar__logo {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
-.nav a {
-  padding: 20px 0;
-  display: inline-block;
-  color: #fff;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-@media screen and (min-width: 992px) {
-  .nav li {
-    float: left;
-    padding: 0 30px;
-  }
-}
-
-.meta {
-  display: none;
-}
-@media screen and (min-width: 992px) {
-  .meta {
-    float: right;
-    display: block;
-  }
-}
-.meta__info {
-  clear: both;
-  margin-top: 40px;
-}
-.meta__info-item {
+.nav--left {
   float: left;
-  margin-left: 30px;
-  height: 28px;
-  font-size: 20px;
 }
-.meta__info-icon {
-  display: inline-block;
-  width: 28px;
-  height: 28px;
-  background: no-repeat center;
-  vertical-align: text-bottom;
+.nav--right {
+  float: right;
+}
+.nav li {
+  float: left;
+  margin-right: 40px;
+}
+.nav a {
+  text-transform: uppercase;
 }
 
 .lang {
-  margin-top: 10px;
-  float: right;
-}
-.lang li {
-  float: left;
-  padding: 0 15px;
-}
-
-@media screen and (min-width: 992px) {
-  .dot-between li {
-    position: relative;
-  }
-  .dot-between li:not(:last-child):after {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 50%;
-    width: 4px;
-    height: 4px;
-    background-color: #009fe3;
-    border-radius: 50%;
-    -webkit-transform: translate(50%, -50%);
-            transform: translate(50%, -50%);
-  }
-}
-
-.slider {
-  margin-top: 62px;
-  padding-top: 15px;
-  height: 250px;
-  background: no-repeat center;
-  background-size: cover;
-  color: #fff;
-  box-sizing: border-box;
-}
-@media screen and (min-width: 992px) {
-  .slider {
-    margin-top: 0;
-    padding-top: 30px;
-    height: 400px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .slider {
-    padding-top: 50px;
-    height: 510px;
-  }
-}
-.slider__caption {
-  margin-top: 10px;
-}
-@media screen and (min-width: 992px) {
-  .slider__caption {
-    font-size: 24px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .slider__caption {
-    font-size: 40px;
-  }
-}
-
-.form {
-  margin-top: 10px;
-  margin-bottom: 30px;
-}
-.form__col {
-  margin-top: 15px;
-}
-@media screen and (min-width: 768px) {
-  .form__pad {
-    padding-right: 20px;
-  }
-  .form__btn {
-    float: right;
-  }
-  .form__col--btn {
-    float: right;
-    margin-top: 36px;
-  }
-  .form__col--btn .btn {
-    padding: 15px 0;
-    width: 100%;
-  }
-}
-@media screen and (min-width: 992px) {
-  .form {
-    margin-top: 20px;
-    margin-bottom: 0;
-    padding-right: 30px;
-  }
-  .form--full-width {
-    margin-top: 0;
-    padding-right: 0;
-  }
-  .form__col {
-    margin-top: 20px;
-  }
-  .form__col-4 {
-    width: calc(33.3333% - 20px);
-    margin-right: 30px;
-  }
-  .form__col-4:last-child {
-    margin-right: 0;
-  }
-  .form__col-6 {
-    width: calc(50% - 15px);
-    margin-right: 30px;
-  }
-  .form__col-6:last-child {
-    margin-right: 0;
-  }
-  .form__col--big {
-    margin-top: 40px;
-  }
-  .form__col--btn {
-    margin-top: 41px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .price {
-    margin-top: 20px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-}
-@media screen and (min-width: 992px) {
-  .price {
-    margin-top: 0;
-  }
-}
-.price__list {
-  margin-top: 20px;
-}
-.price__item {
-  float: left;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-right: 10px;
-  width: calc(50% - 5px);
-}
-.price__item:nth-child(even) {
-  margin-right: 0;
-}
-@media screen and (min-width: 600px) {
-  .price__item {
-    margin-bottom: 0;
-    margin-right: 12px;
-    width: calc(25% - 9px);
-  }
-  .price__item:nth-child(2n) {
-    margin-right: 12px;
-  }
-  .price__item:nth-child(4n) {
-    margin-right: 0;
-  }
-}
-@media screen and (min-width: 992px) {
-  .price__item {
-    margin-top: 20px;
-    margin-right: 20.25px;
-    width: calc(11.1111% - 18px);
-    font-size: 16px;
-    font-weight: 800;
-  }
-  .price__item:nth-child(2n), .price__item:nth-child(4n) {
-    margin-right: 20.25px;
-  }
-  .price__item:nth-child(9n) {
-    margin-right: 0;
-  }
-  .price__item--wide {
-    width: calc(33.3333% - 18px);
-    margin-right: 0 !important;
-  }
-  .price__item--full {
-    margin-top: 39px;
-  }
-}
-.price__item--full {
-  width: 100%;
-}
-@media screen and (min-width: 992px) {
-  .price--small .price__item {
-    margin-right: 20px;
-    width: calc(20% - 16px);
-  }
-  .price--small .price__item:nth-child(2n), .price--small .price__item:nth-child(4n) {
-    margin-right: 20px;
-  }
-  .price--small .price__item:nth-child(5n) {
-    margin-right: 0;
-  }
-  .price--small .price__item--wide {
-    width: calc(40% - 16px);
-  }
-}
-.price--small .price__item--full {
-  width: 100%;
-}
-.price__value {
-  margin-top: 3px;
-  padding: 10px 0;
-  background-color: #009fe3;
-  border-radius: 6px;
-  text-align: center;
-  color: #fff;
-  font-size: 18px;
-}
-@media screen and (min-width: 992px) {
-  .price__value {
-    padding: 0;
-    line-height: 50px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .price__value {
-    font-size: 26px;
-  }
-}
-
-.about__row {
-  margin: 40px 0;
-}
-
-.adventage {
-  background-color: #2b364b;
-}
-.adventage__item {
-  padding: 0 30px;
-  font-size: 16px;
-}
-.adventage__icon {
-  margin: 20px auto;
-  width: 112px;
-  height: 90px;
-  background: no-repeat center;
-}
-
-.faq__rounded-frame {
-  border: 2px solid #e1e1e1;
-  border-radius: 15px;
-  overflow: hidden;
-}
-.faq__rounded-frame--blue {
-  border-color: #009fe3;
-}
-.faq__item {
-  padding: 15px;
-  padding-right: 40px;
-  position: relative;
-  font-weight: 600;
-  border-bottom: 1px solid #e1e1e1;
-  cursor: pointer;
-}
-.faq__item:after {
-  content: '';
   position: absolute;
   top: 50%;
-  right: 20px;
-  display: block;
-  width: 10px;
-  height: 10px;
-  border-right: 2px solid #009fe3;
-  border-bottom: 2px solid #009fe3;
-  -webkit-transform: translateY(-50%) rotate(-45deg);
-          transform: translateY(-50%) rotate(-45deg);
-}
-.faq__item:last-child {
-  border: 0;
-}
-@media screen and (min-width: 992px) {
-  .faq__item {
-    padding: 30px;
-    padding-right: 40px;
-  }
-}
-.faq__item--active {
-  background-color: #009fe3;
-  color: #fff;
-}
-.faq__item--active:after {
-  border-color: #fff;
-}
-.faq__answer {
-  padding: 15px;
-  display: none;
-}
-.faq__answer p {
-  margin-bottom: 0;
-}
-@media screen and (min-width: 992px) {
-  .faq__answer {
-    padding: 30px;
-  }
-}
-@media screen and (min-width: 992px) {
-  .faq__header {
-    font-size: 30px;
-  }
+  right: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
-.contact__item {
-  padding-left: 90px;
-  min-height: 60px;
-  background: no-repeat left center;
-  font-weight: 700;
+.about {
+  padding-top: 150px;
+  height: 100vh;
+  background: center bottom no-repeat;
+  box-sizing: border-box;
 }
-.contact__form {
-  background-color: #009fe3;
-  color: #fff;
+.about__img-wrapper {
+  position: relative;
+  height: 718px;
 }
-.contact__form input, .contact__form textarea {
-  background-color: transparent;
-  border-color: #2b364b;
+.about__img {
+  position: absolute;
 }
-.contact__form button {
-  margin-top: 20px;
+.about__img:nth-child(1) {
+  left: 0;
+  top: 110px;
 }
-@media screen and (min-width: 992px) {
-  .contact__map {
-    height: 275px;
-    background-color: #ccc;
-  }
+.about__img:nth-child(2) {
+  left: 550px;
+  top: 0;
+}
+.about__img:nth-child(3) {
+  left: 449px;
+  top: 400px;
 }
 
-.footer {
-  padding: 40px 0 20px;
-  background-color: #2b364b;
-  color: #fff;
+.latest__item {
+  margin-bottom: 50px;
 }
-.footer__logo {
-  margin-bottom: 23px;
+.latest__btn {
+  text-decoration: underline;
 }
-.footer__icon {
-  margin-bottom: 15px;
-  padding: 10px 0 10px 50px;
-  background: no-repeat left center;
-  font-size: 20px;
-  font-weight: 700;
+
+.social-icon {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background: center /contain no-repeat;
 }
-.footer__map {
-  height: 230px;
-  background-color: #ccc;
+.social-icon--fb {
+  background-image: url("../images/fb.png");
 }
-@media screen and (min-width: 992px) {
-  .footer__map {
-    margin-top: -80px;
-  }
-}
-.footer--contact {
-  padding: 8px 0;
+.social-icon--inst {
+  background-image: url("../images/insta.png");
 }
 
 .credits {
-  margin-top: 10px;
-  font-size: 10px;
+  padding: 10px 0;
+  background-color: #fff;
+  color: #121618;
 }
-@media screen and (min-width: 992px) {
-  .credits {
-    margin: 0;
-  }
-}
-.credits__blue {
-  margin-left: 10px;
-  padding-left: 10px;
+.credits__text {
+  margin-right: 15px;
+  padding-right: 15px;
   display: inline-block;
-  border-left: 1px solid #009fe3;
-}
-.credits__author {
-  vertical-align: middle;
-}
-.credits__logo {
-  width: 118px;
-}
-
-.reserve__underline {
-  border-bottom: 1px solid #e1e1e1;
-}
-@media screen and (min-width: 992px) {
-  .reserve__header {
-    font-size: 30px;
-  }
+  height: 38px;
+  border-right: 2px solid #cecece;
+  line-height: 38px;
+  vertical-align: top;
 }
 
 div#__bs_notify__ {
