--- a/app/sass/sub/_layout.scss
+++ b/app/sass/sub/_layout.scss
@@ -170,16 +170,13 @@
   }
 }
 
-.text-white{
-  color: #fff;
-}
+.text-white{color: #fff;}
 
-.text-bold{
-  font-weight: 700;
-}
-.text-normal{
-  font-weight: 400;
-}
+.text-thin{font-weight: 200;}
+.text-normal{font-weight: 400;}
+.text-semibold{font-weight: 600;}
+.text-bold{font-weight: 700;}
+.text-italic{font-style: italic;}
 
 
 .image{
