--- a/app/sass/sub/_header.scss
+++ b/app/sass/sub/_header.scss
@@ -7,7 +7,10 @@
    }
 
    &__small-text{
+      margin-bottom: 40px;
+      display: inline-block;
       font-size: 20px;
+      font-weight: 600;
    }
 }
 
@@ -16,7 +19,14 @@
    position: absolute;
    padding: 30px 0;
    width: 100%;
-   background-color: #fff; 
+   background-color: #fff;
+
+   &--sub{
+      position: static;
+      // position: fixed; 
+      top: 0;
+      left: 0;
+   }
 
    &__container{
       position: relative;
@@ -49,6 +59,7 @@
    }
 
    a{
+      font-weight: 500;
       text-transform: uppercase;
    }
 }
