--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -58,31 +58,65 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
+@font-face {
+  font-family: 'metropolis';
+  src: url("../font/Metropolis-Thin.otf");
+  font-weight: 200;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url("../font/Metropolis-Light.otf");
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url("../font/Metropolis-LightItalic.otf");
+  font-weight: 300;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url("../font/Metropolis-Regular.otf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url("../font/Metropolis-Medium.otf");
+  font-weight: 500;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url("../font/Metropolis-SemiBold.otf");
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'metropolis';
+  src: url("../font/Metropolis-SemiBoldItalic.otf");
+  font-weight: 600;
+  font-style: italic;
+}
 body {
   font-weight: 400;
   font-size: 14px;
+  font-family: "metropolis", sans-serif;
 }
 
 h1, h2 {
   font-weight: 700;
 }
 
-h1 {
-  font-size: 26px;
-}
-
-h2 {
+h1, h2 {
   font-size: 26px;
   color: #cecece;
 }
 @media screen and (min-width: 992px) {
-  h2 {
+  h1, h2 {
     font-size: 36px;
   }
 }
 @media screen and (min-width: 1200px) {
-  h2 {
-    font-size: 48px;
+  h1, h2 {
+    font-size: 80px;
   }
 }
 
@@ -102,10 +136,11 @@ h3 {
 
 h4 {
   font-size: 18px;
+  font-weight: 600;
 }
 @media screen and (min-width: 1200px) {
   h4 {
-    font-size: 22px;
+    font-size: 20px;
   }
 }
 
@@ -123,10 +158,9 @@ p {
   margin: 1em 0;
   line-height: 1.5em;
 }
-@media screen and (min-width: 1200px) {
-  p {
-    font-size: 18px;
-  }
+
+strong {
+  font-weight: 600;
 }
 
 input, textarea {
@@ -482,12 +516,24 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   color: #fff;
 }
 
-.text-bold {
-  font-weight: 700;
+.text-thin {
+  font-weight: 200;
 }
 
 .text-normal {
   font-weight: 400;
+}
+
+.text-semibold {
+  font-weight: 600;
+}
+
+.text-bold {
+  font-weight: 700;
+}
+
+.text-italic {
+  font-style: italic;
 }
 
 .image {
@@ -532,9 +578,34 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .pl-40 {
+    padding-left: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .pr-40 {
+    padding-right: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .pt-130 {
+    padding-top: 130px;
+  }
+}
+
 .dark-bg {
   background-color: #121618;
   color: #fff;
+}
+
+.btn {
+  text-transform: uppercase;
+}
+.btn--underline {
+  text-decoration: underline;
 }
 
 .header {
@@ -545,7 +616,10 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   width: 146px;
 }
 .header__small-text {
+  margin-bottom: 40px;
+  display: inline-block;
   font-size: 20px;
+  font-weight: 600;
 }
 
 .navbar {
@@ -553,6 +627,11 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   padding: 30px 0;
   width: 100%;
   background-color: #fff;
+}
+.navbar--sub {
+  position: static;
+  top: 0;
+  left: 0;
 }
 .navbar__container {
   position: relative;
@@ -577,6 +656,7 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   margin-right: 40px;
 }
 .nav a {
+  font-weight: 500;
   text-transform: uppercase;
 }
 
@@ -614,11 +694,41 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   top: 400px;
 }
 
+.staff p {
+  font-weight: 300;
+}
+.staff__col {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 992px) {
+  .staff__col {
+    margin-right: 30px;
+    width: calc(50% - 15px);
+  }
+  .staff__col:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
 .latest__item {
   margin-bottom: 50px;
+  padding-bottom: 50px;
+  border-bottom: 1px solid #cecece;
 }
-.latest__btn {
-  text-decoration: underline;
+.latest__item:last-of-type {
+  padding-bottom: 0;
+  border-bottom: 0;
+}
+.latest__pl-40 {
+  padding-left: 40px;
+}
+.latest__pr-40 {
+  padding-right: 40px;
+}
+.latest__flex-bot {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .social-icon {
@@ -638,6 +748,7 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   padding: 10px 0;
   background-color: #fff;
   color: #121618;
+  font-size: 10px;
 }
 .credits__text {
   margin-right: 15px;
