latest productions page

--- a/app/sass/sub/_about.scss
+++ b/app/sass/sub/_about.scss
@@ -1,6 +1,6 @@
 .about{
    padding-top: 150px;
-   height: 100vh;
+   height: 650px;
    background: center bottom no-repeat;
    box-sizing: border-box;
 
