--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -670,7 +670,7 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
 
 .about {
   padding-top: 150px;
-  height: 100vh;
+  height: 650px;
   background: center bottom no-repeat;
   box-sizing: border-box;
 }
