contact page, rwd

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -29,6 +29,7 @@
  @import 'sub/about';
  @import 'sub/latest';
  @import 'sub/footer';
+ @import 'sub/contact';
 
 
  div#__bs_notify__{display: none !important;}
