--- a/app/sass/sub/_header.scss
+++ b/app/sass/sub/_header.scss
@@ -15,52 +15,139 @@
 }
 
 
-.navbar{
-   position: absolute;
-   padding: 30px 0;
+.navbar-wrapper{
+   position: fixed;
+   top: 0;
+   padding: 10px 0;
    width: 100%;
    background-color: #fff;
-
-   &--sub{
-      position: static;
-      // position: fixed; 
-      top: 0;
-      left: 0;
+   z-index: 999;
+   @include media($breakpointMd){
+      position: absolute;
+      top: auto;
+      padding: 30px 0;
+      &--sub{position: static;}
    }
 
    &__container{
       position: relative;
-      padding: 28px 0;
+      @include media($breakpointMd){
+         padding: 28px 15px;
+      }
+   }
+}
+
+.mobile-logo{
+   float: left;
+   width: 70px;
+   @include media($breakpointMd){
+      display: none;
+   }
+}
+
+.burger{
+   position: relative;
+   float: right;
+   margin-top: 10px;
+   width: 20px;
+   height: 30px;
+   transition: 200ms ease-out;
+   z-index: 20;
+   &__bar{
+      position: relative;
+      margin-top: 14px;
+      width: 100%;
+      height: 2px;
+      background-color: $dark;
+      transition: 300ms;
+      &:before, &:after{
+         content: '';
+         position: absolute;
+         width: 100%;
+         height: 2px;
+         background-color: $dark;
+         transition: 300ms;
+      }
+      &:before{
+         top: -5px;
+      }
+      &:after{
+         bottom: -5px;
+      }
+   }
+
+   &--active{
+      transform: rotate(-90deg);
+   }
+   @include media($breakpointMd){
+      display: none;
+   }
+}
+
+.navbar{
+   position: fixed;
+   left: 0;
+   top: 70px;
+   bottom: 0;
+   padding-top: 50px;
+   width: 100%;
+   background-color: #fff;
+   visibility: hidden;
+   opacity: 0;
+   transition: 200ms;
+   &--active{
+      visibility: visible;
+      opacity: 1;
+   }
+   @include media($breakpointMd){
+      position: static;
+      padding: 0;
+      visibility: visible;
+      opacity: 1;
    }
 
    &__logo{
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
+      display: none;
+      @include media($breakpointMd){
+         position: absolute;
+         top: 0;
+         left: 50%;
+         display: inline-block;
+         transform: translateX(-50%);
+      }
    }
 }
 
 .nav{
-
-   &--left{
-      float: left;
-   }
-   &--right{
-      float: right;
-   }
-
-   li{
-      float: left;
-      margin-right: 40px;
-      &:nth-child(4){
-
-      }
-   }
-
+   width: 100%;
    a{
+      padding: 10px 0;
+      display: inline-block;
       font-weight: 500;
       text-transform: uppercase;
+      font-size: 20px;
+   }
+   @include media($breakpointMd){
+      width: auto;
+      &--left{
+         float: left;
+      }
+      &--right{
+         float: right;
+      }
+
+      li{
+         float: left;
+         margin-right: 40px;
+         &:nth-child(4){
+
+         }
+      }
+
+      a{
+         padding: 0;
+         font-size: 14px;
+      }
    }
 }
 
