--- a/app/sass/sub/_layout.scss
+++ b/app/sass/sub/_layout.scss
@@ -4,7 +4,7 @@
   width: 100%;
   max-width: 1170px;
   box-sizing: border-box;
-  @include media(1170px){
+  @include media($breakpointLg){
     padding: 0;
   }
 }
@@ -16,18 +16,19 @@
     clear: both;
   }
 }
-.col-xs-2, .col-xs-3, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8,
+.col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8,
 .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9,
 .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9{
   box-sizing: border-box;
 }
 
 @include media($breakpointXs){
-  .col-xs-2, .col-xs-3, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8{
+  .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8{
     float: left;
   }
   .col-xs-2{width: 1/6*100%;}
   .col-xs-3{width: 25%;}
+  .col-xs-4{width: 33.3333%;}
   .col-xs-5{width: 5/12*100%;}
   .col-xs-6{width: 50%;}
   .col-xs-7{width: 7/12*100%;}
@@ -60,6 +61,18 @@
   .col-md-7{width: 7/12*100%;}
   .col-md-8{width: 66.6666%;}
   .col-md-9{width: 75%;}
+}
+@include media($breakpointLg){
+  .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9{
+    float: left;
+  }
+  .col-lg-3{width: 25%;}
+  .col-lg-4{width: 33.33%;}
+  .col-lg-5{width: 5/12*100%;}
+  .col-lg-6{width: 50%;}
+  .col-lg-7{width: 7/12*100%;}
+  .col-lg-8{width: 66.6666%;}
+  .col-lg-9{width: 75%;}
 }
 
 .flexbox{
@@ -178,10 +191,28 @@
 .text-bold{font-weight: 700;}
 .text-italic{font-style: italic;}
 
+.image-wrapper{
+   margin: 30px 0;
+   height: 200px;
+   @include media($breakpointSm){
+      height: 250px;
+   }
+   @include media($breakpointMd){
+      margin: 0;
+      height: auto;
+   }
+}
 
 .image{
   width: 100%;
   height: 100%;
   vertical-align: middle;
   object-fit: cover;
+
+  &--hidden-mobile{
+     display: none;
+     @include media($breakpointMd){
+        display: inline;
+     }
+ }
 }
