--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -164,19 +164,22 @@ strong {
 }
 
 input, textarea {
+  margin-bottom: 15px;
   padding: 14px 10px;
   display: block;
   width: 100%;
-  border-radius: 6px;
+  border: 1px solid #cecece;
   box-sizing: border-box;
 }
 input:focus, textarea:focus {
   outline: 0;
+  box-shadow: 0 0 5px 0 #cecece;
 }
 
 textarea {
   height: 140px;
   resize: none;
+  font-family: "metropolis", sans-serif;
 }
 
 label {
@@ -218,7 +221,7 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   max-width: 1170px;
   box-sizing: border-box;
 }
-@media screen and (min-width: 1170px) {
+@media screen and (min-width: 1200px) {
   .container {
     padding: 0;
   }
@@ -230,14 +233,14 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   clear: both;
 }
 
-.col-xs-2, .col-xs-3, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8,
+.col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8,
 .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9,
 .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9 {
   box-sizing: border-box;
 }
 
 @media screen and (min-width: 600px) {
-  .col-xs-2, .col-xs-3, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8 {
+  .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8 {
     float: left;
   }
 
@@ -247,6 +250,10 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
 
   .col-xs-3 {
     width: 25%;
+  }
+
+  .col-xs-4 {
+    width: 33.3333%;
   }
 
   .col-xs-5 {
@@ -332,6 +339,39 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   }
 
   .col-md-9 {
+    width: 75%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9 {
+    float: left;
+  }
+
+  .col-lg-3 {
+    width: 25%;
+  }
+
+  .col-lg-4 {
+    width: 33.33%;
+  }
+
+  .col-lg-5 {
+    width: 41.66667%;
+  }
+
+  .col-lg-6 {
+    width: 50%;
+  }
+
+  .col-lg-7 {
+    width: 58.33333%;
+  }
+
+  .col-lg-8 {
+    width: 66.6666%;
+  }
+
+  .col-lg-9 {
     width: 75%;
   }
 }
@@ -536,12 +576,41 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   font-style: italic;
 }
 
+.image-wrapper {
+  margin: 30px 0;
+  height: 200px;
+}
+@media screen and (min-width: 768px) {
+  .image-wrapper {
+    height: 250px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .image-wrapper {
+    margin: 0;
+    height: auto;
+  }
+}
+
 .image {
   width: 100%;
   height: 100%;
   vertical-align: middle;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.image--hidden-mobile {
+  display: none;
+}
+@media screen and (min-width: 992px) {
+  .image--hidden-mobile {
+    display: inline;
+  }
+}
+
+.moved {
+  margin-top: -100vh;
+  transition: 500ms;
 }
 
 .mtb-80 {
@@ -578,13 +647,13 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 992px) {
   .pl-40 {
     padding-left: 40px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 992px) {
   .pr-40 {
     padding-right: 40px;
   }
@@ -593,6 +662,15 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
 @media screen and (min-width: 1200px) {
   .pt-130 {
     padding-top: 130px;
+  }
+}
+
+.mobile-space {
+  padding-top: 40px;
+}
+@media screen and (min-width: 992px) {
+  .mobile-space {
+    padding-top: 0;
   }
 }
 
@@ -606,6 +684,50 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
 }
 .btn--underline {
   text-decoration: underline;
+}
+
+@media screen and (min-width: 992px) {
+  .two-col {
+    -webkit-columns: 2;
+            columns: 2;
+  }
+}
+
+.slick-wrapper {
+  position: relative;
+}
+
+.slick__item {
+  padding: 0 10px;
+  height: 180px !important;
+  box-sizing: border-box;
+}
+
+.slick-arrow {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .slick-arrow {
+    display: block;
+    position: absolute;
+    top: 50%;
+    width: 15px;
+    height: 15px;
+  }
+  .slick-arrow--prev {
+    left: -20px;
+    border-left: 3px solid #cecece;
+    border-bottom: 3px solid #cecece;
+    -webkit-transform: translateY(-50%) rotate(45deg);
+            transform: translateY(-50%) rotate(45deg);
+  }
+  .slick-arrow--next {
+    right: -20px;
+    border-right: 3px solid #cecece;
+    border-bottom: 3px solid #cecece;
+    -webkit-transform: translateY(-50%) rotate(-45deg);
+            transform: translateY(-50%) rotate(-45deg);
+  }
 }
 
 .header {
@@ -622,42 +744,150 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   font-weight: 600;
 }
 
-.navbar {
-  position: absolute;
-  padding: 30px 0;
+.navbar-wrapper {
+  position: fixed;
+  top: 0;
+  padding: 10px 0;
   width: 100%;
   background-color: #fff;
+  z-index: 999;
 }
-.navbar--sub {
-  position: static;
-  top: 0;
-  left: 0;
+@media screen and (min-width: 992px) {
+  .navbar-wrapper {
+    position: absolute;
+    top: auto;
+    padding: 30px 0;
+  }
+  .navbar-wrapper--sub {
+    position: static;
+  }
 }
-.navbar__container {
+.navbar-wrapper__container {
   position: relative;
-  padding: 28px 0;
 }
-.navbar__logo {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+@media screen and (min-width: 992px) {
+  .navbar-wrapper__container {
+    padding: 28px 15px;
+  }
 }
 
-.nav--left {
+.mobile-logo {
   float: left;
+  width: 70px;
 }
-.nav--right {
+@media screen and (min-width: 992px) {
+  .mobile-logo {
+    display: none;
+  }
+}
+
+.burger {
+  position: relative;
   float: right;
+  margin-top: 10px;
+  width: 20px;
+  height: 30px;
+  transition: 200ms ease-out;
+  z-index: 20;
 }
-.nav li {
-  float: left;
-  margin-right: 40px;
+.burger__bar {
+  position: relative;
+  margin-top: 14px;
+  width: 100%;
+  height: 2px;
+  background-color: #121618;
+  transition: 300ms;
+}
+.burger__bar:before, .burger__bar:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #121618;
+  transition: 300ms;
+}
+.burger__bar:before {
+  top: -5px;
+}
+.burger__bar:after {
+  bottom: -5px;
+}
+.burger--active {
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+@media screen and (min-width: 992px) {
+  .burger {
+    display: none;
+  }
+}
+
+.navbar {
+  position: fixed;
+  left: 0;
+  top: 70px;
+  bottom: 0;
+  padding-top: 50px;
+  width: 100%;
+  background-color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  transition: 200ms;
+}
+.navbar--active {
+  visibility: visible;
+  opacity: 1;
+}
+@media screen and (min-width: 992px) {
+  .navbar {
+    position: static;
+    padding: 0;
+    visibility: visible;
+    opacity: 1;
+  }
+}
+.navbar__logo {
+  display: none;
+}
+@media screen and (min-width: 992px) {
+  .navbar__logo {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    display: inline-block;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
+
+.nav {
+  width: 100%;
 }
 .nav a {
+  padding: 10px 0;
+  display: inline-block;
   font-weight: 500;
   text-transform: uppercase;
+  font-size: 20px;
+}
+@media screen and (min-width: 992px) {
+  .nav {
+    width: auto;
+  }
+  .nav--left {
+    float: left;
+  }
+  .nav--right {
+    float: right;
+  }
+  .nav li {
+    float: left;
+    margin-right: 40px;
+  }
+  .nav a {
+    padding: 0;
+    font-size: 14px;
+  }
 }
 
 .lang {
@@ -669,29 +899,46 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
 }
 
 .about {
-  padding-top: 150px;
-  height: 650px;
-  background: center bottom no-repeat;
+  margin: 30px 0;
   box-sizing: border-box;
 }
-.about__img-wrapper {
-  position: relative;
-  height: 718px;
+@media screen and (min-width: 992px) {
+  .about {
+    padding-top: 150px;
+    height: 650px;
+    background: center bottom no-repeat;
+  }
 }
-.about__img {
-  position: absolute;
+.about br {
+  display: none;
 }
-.about__img:nth-child(1) {
-  left: 0;
-  top: 110px;
+@media screen and (min-width: 992px) {
+  .about br {
+    display: inline;
+  }
 }
-.about__img:nth-child(2) {
-  left: 550px;
-  top: 0;
+@media screen and (min-width: 992px) {
+  .about__img-wrapper {
+    position: relative;
+    height: 718px;
+  }
 }
-.about__img:nth-child(3) {
-  left: 449px;
-  top: 400px;
+@media screen and (min-width: 992px) {
+  .about__img {
+    position: absolute;
+  }
+  .about__img:nth-child(1) {
+    left: 0;
+    top: 110px;
+  }
+  .about__img:nth-child(2) {
+    left: 50%;
+    top: 0;
+  }
+  .about__img:nth-child(3) {
+    left: 449px;
+    top: 400px;
+  }
 }
 
 .staff p {
@@ -709,26 +956,62 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
     margin-right: 0;
   }
 }
+.staff__img-wrapper {
+  margin-bottom: 15px;
+  height: 200px;
+}
+@media screen and (min-width: 600px) {
+  .staff__img-wrapper {
+    margin: 0;
+    padding-right: 15px;
+  }
+}
 
 .latest__item {
-  margin-bottom: 50px;
-  padding-bottom: 50px;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
   border-bottom: 1px solid #cecece;
 }
 .latest__item:last-of-type {
   padding-bottom: 0;
   border-bottom: 0;
 }
-.latest__pl-40 {
-  padding-left: 40px;
-}
-.latest__pr-40 {
-  padding-right: 40px;
+@media screen and (min-width: 1200px) {
+  .latest__item {
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+  }
 }
 .latest__flex-bot {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+}
+.latest__list-item {
+  line-height: 1.5em;
+  font-size: 20px;
+}
+.latest__logo {
+  margin: 10px;
+}
+@media screen and (min-width: 992px) {
+  .latest__logo {
+    margin: 0 10px;
+  }
+}
+.latest__lg-show {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .latest__lg-show {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.footer {
+  padding: 30px 0;
 }
 
 .social-icon {
@@ -758,6 +1041,23 @@ div.wpcf7-response-output.wpcf7-validation-errors, div.wpcf7-response-output.wpc
   border-right: 2px solid #cecece;
   line-height: 38px;
   vertical-align: top;
+}
+
+.form {
+  margin: 0 auto;
+}
+@media screen and (min-width: 1200px) {
+  .form {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .form {
+    width: 60%;
+  }
+}
+.form__col {
+  padding: 0 7px;
 }
 
 div#__bs_notify__ {
